--- a/index.html
+++ b/index.html
@@ -6,88 +6,139 @@
   <title>My Vaporwave Synthwave Site</title>
   <!-- Pixel Font 추가 -->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-  <!-- 루트 URL 접속 시 페이지 로드 보장을 위해 파일명을 index.html로 사용 -->
   <style>
-    /* 기본 리셋 */
     * { margin:0; padding:0; box-sizing:border-box; }
-    /* 커서 커스터마이징: 레트로 픽셀 커서 */
+    /* 커서 커스터마이징 */
     body, .control-btn, .btn-xp {
-      cursor: url('https://i.imgur.com/3jH9H5Y.png'), auto;
+      cursor: url('https://i.pinimg.com/originals/de/41/f8/de41f832a88afc20d28157037b389f8c.gif') 16 16, auto;
     }
     body {
       height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-family:'Press Start 2P', monospace;
       overflow:hidden;
       background:#000;
+      position:relative;
+      font-family:'Press Start 2P', monospace;
     }
-    /* 배경 비주얼 */
+    /* 기본 배경: 그리드 애니메이션 */
     .bg {
-      position:absolute;
-      top:0; left:0;
+      position:absolute; top:0; left:0;
       width:100%; height:100%;
-      background: linear-gradient(135deg, #2b0a3d 0%, #7f0a9e 50%, #ff79c6 100%);
+      background: linear-gradient(135deg, #2b0a3d, #7f0a9e 50%, #ff79c6);
+      animation: gridMove 12s linear infinite;
       z-index:1;
-      animation: gridMove 10s linear infinite;
     }
-    .bg::before {
-      content:'';
-      position:absolute;
-      top:50%; left:50%;
-      width:200%; height:200%;
-      background: radial-gradient(circle at center, rgba(255,255,255,0.1), transparent 70%);
-      transform: translate(-50%, -50%);
+    @keyframes gridMove {
+      0% { background-position:0 0; }
+      100% { background-position:100% 100%; }
     }
-    @keyframes gridMove { 0% { background-position:0 0; } 100% { background-position:100% 100%; } }
     /* 네온 라인 */
     .neon {
-      position:absolute; width:200%; height:200%; top:-50%; left:-50%;
-      background: repeating-linear-gradient(45deg, rgba(0,255,255,0.2), rgba(0,255,255,0.2) 1px, transparent 1px, transparent 20px),
-                  repeating-linear-gradient(-45deg, rgba(255,0,255,0.2), rgba(255,0,255,0.2) 1px, transparent 1px, transparent 20px);
+      position:absolute; top:-50%; left:-50%; width:200%; height:200%;
+      background:
+        repeating-linear-gradient(45deg, rgba(0,255,255,0.2) 0, rgba(0,255,255,0.2) 1px, transparent 1px, transparent 20px),
+        repeating-linear-gradient(-45deg, rgba(255,0,255,0.2) 0, rgba(255,0,255,0.2) 1px, transparent 1px, transparent 20px);
       animation: neonFlicker 3s infinite;
       z-index:2;
     }
-    @keyframes neonFlicker { 0%,100% { opacity:0.4; } 50% { opacity:0.1; } }
-    /* 떠다니는 하트 */
-    .heart {
-      position:absolute; width:24px; height:24px;
-      background:url('https://i.imgur.com/O6b4h6F.png') no-repeat center/contain;
+    @keyframes neonFlicker {
+      0%,100% { opacity:0.4; }
+      50% { opacity:0.1; }
+    }
+    /* 트윙클 별 (강한 반짝임) */
+    .star {
+      position:absolute;
+      background:#fff;
+      border-radius:50%;
+      opacity:0;
+      pointer-events:none;
+      animation: starTwinkle 1.5s ease-out forwards;
+      z-index:1;
+    }
+    @keyframes starTwinkle {
+      0% { opacity:0; transform: scale(0.2); }
+      30% { opacity:1; transform: scale(1); }
+      100% { opacity:0; transform: scale(0.2); }
+    }
+    /* 플로팅 GIF */
+    .floating-gif {
+      position:absolute;
+      width:48px; height:48px;
+      background-position:center;
+      background-size:contain;
+      background-repeat:no-repeat;
       animation: floatUp 6s linear forwards;
-      z-index:4;
+      z-index:3;
     }
     @keyframes floatUp {
       0% { transform: translateY(100vh) scale(0.8); opacity:0; }
-      10% { opacity:0.8; }
-      100% { transform: translateY(-100px) scale(1.2); opacity:0; }
+      10% { opacity:1; }
+      100% { transform: translateY(-150px) scale(1.2); opacity:0; }
     }
-    /* XP 윈도우 스타일 */
+    /* XP 스타일 윈도우 */
     .window {
-      position:relative; z-index:3; width:600px;
+      position:relative;
+      z-index:4;
+      width:600px;
+      margin:0 auto;
+      top:50%; transform: translateY(-50%);
       background:#c0c0c0; border:2px solid #fff; box-shadow:4px 4px 0 #000;
-      font-family:'Press Start 2P', monospace;
     }
     .title-bar {
-      background:linear-gradient(to right, #000080, #0000cd); color:#fff;
-      padding:4px 8px; display:flex; justify-content:space-between; align-items:center;
+      display:flex; justify-content:space-between; align-items:center;
+      padding:4px 8px;
+      background: linear-gradient(to right, #000080, #0000cd);
+      color:#fff;
       border-bottom:2px solid #fff;
     }
-    .title { font-size:0.75rem; }
-    .buttons { display:flex; }
-    .btn-xp { width:16px; height:16px; margin-left:4px; background:#ff5c5c; border:1px solid #fff; cursor:pointer; }
-    .content { padding:16px; background:#008080; border-top:2px solid #fff; }
-    h1 { font-size:1.25rem; color:#ff79c6; text-shadow:0 0 5px #ff79c6,0 0 10px #ff79c6; margin-bottom:0.5rem; }
-    p { font-size:0.75rem; color:#00ffff; text-shadow:0 0 5px #00ffff; margin-bottom:1rem; }
-    .control-btn {
-      margin:0.5rem; padding:0.6rem 1.2rem; font-size:0.6rem;
-      color:#000; background:#ff79c6; border:2px solid #00ffff; border-radius:6px;
-      transition: transform 0.2s, background 0.2s;
+    .buttons .btn-xp {
+      width:16px; height:16px;
+      margin-left:4px;
+      background:#ff5c5c;
+      border:1px solid #fff;
+      cursor:pointer;
     }
-    .control-btn:hover { background:#00ffff; transform: scale(1.1); color:#121212; }
-    #player { width:100%; height:315px; border:2px solid #00ffff; border-radius:4px; margin:1rem 0; }
+    .content {
+      padding:16px;
+      background:#008080;
+      border-top:2px solid #fff;
+    }
+    h1 {
+      font-size:1.25rem;
+      color:#ff79c6;
+      text-shadow:0 0 5px #ff79c6, 0 0 10px #ff79c6;
+      margin-bottom:0.5rem;
+    }
+    p {
+      font-size:0.75rem;
+      color:#00ffff;
+      text-shadow:0 0 5px #00ffff;
+      margin-bottom:1rem;
+    }
+    .control-btn {
+      margin:0.5rem;
+      padding:0.6rem 1.2rem;
+      font-size:0.6rem;
+      background:#ff79c6;
+      border:2px solid #00ffff;
+      border-radius:6px;
+      color:#000;
+      cursor:pointer;
+      transition:0.2s;
+    }
+    .control-btn:hover {
+      background:#00ffff;
+      transform: scale(1.1);
+      color:#121212;
+    }
+    #player {
+      width:100%; height:315px;
+      border:2px solid #00ffff;
+      border-radius:4px;
+      margin:1rem 0;
+    }
     .fallback {
-      font-size:0.6rem; color:#ff79c6; margin-top:8px;
+      font-size:0.6rem;
+      color:#ff79c6;
     }
     .fallback a { color:#00ffff; text-decoration:underline; }
   </style>
@@ -95,14 +146,26 @@
 <body>
   <div class="bg"></div>
   <div class="neon"></div>
+
+  <!-- 별 생성 -->
+  <script>
+    setInterval(() => {
+      const star = document.createElement('div');
+      star.className = 'star';
+      const size = Math.random() * 4 + 2; // 2~6px
+      star.style.width = size + 'px';
+      star.style.height = size + 'px';
+      star.style.left = Math.random() * 100 + '%';
+      star.style.top = Math.random() * 100 + '%';
+      document.body.appendChild(star);
+      star.addEventListener('animationend', () => star.remove());
+    }, 100);
+  </script>
+
   <div class="window">
     <div class="title-bar">
-      <span class="title">Vaporwave Player</span>
-      <div class="buttons">
-        <div class="btn-xp"></div>
-        <div class="btn-xp"></div>
-        <div class="btn-xp"></div>
-      </div>
+      <span>Vaporwave Player</span>
+      <div class="buttons"><div class="btn-xp"></div><div class="btn-xp"></div><div class="btn-xp"></div></div>
     </div>
     <div class="content">
       <h1>Retro Music On XP</h1>
@@ -113,41 +176,34 @@
         <button class="control-btn" id="play">Play</button>
         <button class="control-btn" id="next">Next ▶︎</button>
       </div>
-      <p class="fallback">
-        임베딩 차단 시
-        <a href="https://www.youtube.com/watch?v=WI4-HUn8dFc&list=PLGa3uxog5E0tb8WmX0STOZRgLZAZX-rAk" target="_blank" rel="noopener noreferrer">YouTube에서 열기</a>
-      </p>
+      <p class="fallback">임베딩 차단 시 <a href="https://www.youtube.com/watch?v=WI4-HUn8dFc&list=PLGa3uxog5E0tb8WmX0STOZRgLZAZX-rAk" target="_blank">여기</a> 클릭</p>
     </div>
   </div>
+
+  <!-- 플로팅 GIF 생성 & YouTube API 설정 -->
   <script>
-    // YouTube IFrame API 로드
-    const tag = document.createElement('script');
-    tag.src = 'https://www.youtube.com/iframe_api';
-    document.body.appendChild(tag);
+    const gifs = [
+      'https://media.tenor.com/Uvw2ilLXmnYAAAAj/pixel-heart.gif',
+      'https://i.pinimg.com/originals/a9/9e/41/a99e419272b53630b5d5b178188a8900.gif',
+      'https://i.pinimg.com/originals/ea/9f/e2/ea9fe22ede2464b8aab30a4028a796a9.gif'
+    ];
+    const tag = document.createElement('script'); tag.src = 'https://www.youtube.com/iframe_api'; document.head.appendChild(tag);
     let player;
     function onYouTubeIframeAPIReady() {
-      player = new YT.Player('player', {
-        height:'100%', width:'100%',
-        playerVars:{ listType:'playlist', list:'PLGa3uxog5E0tb8WmX0STOZRgLZAZX-rAk', autoplay:0, controls:0, loop:1, modestbranding:1, origin:window.location.origin }
-      });
+      player = new YT.Player('player', { playerVars: { listType:'playlist', list:'PLGa3uxog5E0tb8WmX0STOZRgLZAZX-rAk', autoplay:0, controls:0, loop:1, modestbranding:1, origin:location.origin } });
     }
-    document.addEventListener('DOMContentLoaded',()=>{
-      document.getElementById('play').addEventListener('click',()=>{player.getPlayerState()===YT.PlayerState.PLAYING?player.pauseVideo():player.playVideo();});
-      document.getElementById('prev').addEventListener('click',()=>player.previousVideo());
-      document.getElementById('next').addEventListener('click',()=>player.nextVideo());
-      // 하트 생성
+    document.addEventListener('DOMContentLoaded', () => {
+      document.getElementById('play').onclick = () => { const s = player.getPlayerState(); s===YT.PlayerState.PLAYING ? player.pauseVideo() : player.playVideo(); };
+      document.getElementById('prev').onclick = () => player.previousVideo();
+      document.getElementById('next').onclick = () => player.nextVideo();
       setInterval(() => {
-        const heart = document.createElement('div');
-        heart.className = 'heart';
-        heart.style.left = Math.random() * 90 + '%';
-        document.body.appendChild(heart);
-        heart.addEventListener('animationend', () => heart.remove());
+        const el = document.createElement('div'); el.className = 'floating-gif';
+        el.style.left = Math.random() * 90 + '%';
+        el.style.backgroundImage = `url('${gifs[Math.floor(Math.random()*gifs.length)]}')`;
+        document.body.appendChild(el);
+        el.addEventListener('animationend', () => el.remove());
       }, 800);
     });
-  </script>
-  <!-- YouTube API 콜백 함수 -->
-  <script>
-    function onYouTubeIframeAPIReady() {}
   </script>
 </body>
 </html>
