--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       const firebaseConfig = {
         apiKey: "AIzaSyCcNEZGmBSH3U_RlvmAOXYFHbW7dzzbFDE",
         authDomain: "vapor-71b36.firebaseapp.com",
-        databaseURL: "https://vapor-71b36-default-rtdb.firebaseio.com",
+        databaseURL: "https://vapor-71b36-default-rtdb.firebaseio.com/",
         projectId: "vapor-71b36",
         storageBucket: "vapor-71b36.appspot.com",
         messagingSenderId: "344956365850",
