--- a/index.html
+++ b/index.html
@@ -2,105 +2,61 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Vaporwave Synthwave Site with Chat</title>
   <!-- Pixel Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
   <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
   <style>
     /* Reset */
     * { margin:0; padding:0; box-sizing:border-box; }
-    html, body {
-      width:100%; height:100%; overflow-x:hidden;
-      background:#000; font-family:'Press Start 2P',monospace; position:relative;
-      cursor:url('https://i.pinimg.com/originals/de/41/f8/de41f832a88afc20d28157037b389f8c.gif') 16 16,auto;
-    }
-    /* Grid Animation */
-    .bg { position:absolute;top:0;left:0;width:100%;height:100%;
-      background:linear-gradient(135deg,#2b0a3d,#7f0a9e 50%,#ff79c6);
-      animation: gridMove 12s linear infinite;z-index:1;
-    }
-    @keyframes gridMove {0%{background-position:0 0;}100%{background-position:100% 100%;}}
-    /* Neon Lines */
-    .neon { position:absolute;top:-50%;left:-50%;width:200%;height:200%;
-      background:repeating-linear-gradient(45deg,rgba(0,255,255,0.2)0,transparent20px),
-                 repeating-linear-gradient(-45deg,rgba(255,0,255,0.2)0,transparent20px);
-      animation: neonFlicker 3s infinite;z-index:2;
-    }
+    html, body { width:100%; height:100%; overflow:hidden; background:#000; font-family:'Press Start 2P',monospace; position:relative; cursor:auto; }
+    /* Full-cover background */
+    .bg { position:absolute; top:0; left:0; width:100%; height:100%; background:linear-gradient(135deg,#2b0a3d,#7f0a9e 50%,#ff79c6); background-size:cover; z-index:1; }
+    /* Neon lines */
+    .neon { position:absolute; top:-50%; left:-50%; width:200%; height:200%; background:repeating-linear-gradient(45deg,rgba(0,255,255,0.15)0,transparent20px),repeating-linear-gradient(-45deg,rgba(255,0,255,0.15)0,transparent20px); animation:neonFlicker 3s infinite; z-index:2; }
     @keyframes neonFlicker {0%,100%{opacity:.4;}50%{opacity:.1;}}
-    /* Twinkle Stars */
-    .star { position:absolute;background:#fff;border-radius:50%;opacity:0;
-      animation:starTwinkle 1.5s ease-out forwards;z-index:1;
-    }
-    @keyframes starTwinkle {0%{opacity:0;transform:scale(.2);}30%{opacity:1;transform:scale(1);}100%{opacity:0;transform:scale(.2);}}
-    /* Floating GIFs */
-    .floating-gif { position:absolute;width:8vw;max-width:48px;height:8vw;max-height:48px;
-      background-position:center;background-size:contain;background-repeat:no-repeat;
-      animation:floatUp 6s linear forwards;z-index:3;
-    }
-    @keyframes floatUp {0%{transform:translateY(100vh) scale(.8);opacity:0;}10%{opacity:1;}100%{transform:translateY(-150px) scale(1.2);opacity:0;}}
+    /* Floating stars */
+    .floating-star { position:absolute; color:white; font-size:4vw; opacity:0; animation:starRise 4s linear forwards, starColor 2s linear infinite; z-index:3; }
+    @keyframes starRise {0%{transform:translateY(100vh) scale(.5);opacity:1;}100%{transform:translateY(-10vh) scale(1);opacity:0;}}
+    @keyframes starColor {0%{color:red;}16%{color:orange;}32%{color:yellow;}48%{color:green;}64%{color:blue;}80%{color:indigo;}100%{color:violet;}}
     /* XP Window */
-    .window { position:relative;z-index:4;width:90vw;max-width:600px;margin:40px auto;
-      background:#c0c0c0;border:2px solid #fff;box-shadow:1px 1px 0 #000,-1px -1px 0 #808080;overflow:hidden;
-    }
-    .title-bar { display:flex;justify-content:space-between;align-items:center;
-      padding:4px 8px;background:linear-gradient(to right,#000080,#0000cd);
-      color:#fff;border-bottom:2px solid #fff;
-    }
+    .window { position:relative; z-index:4; width:90vw; max-width:600px; margin:40px auto; background:#c0c0c0; border:2px solid #fff; box-shadow:1px 1px 0 #000,-1px -1px 0 #808080; overflow:hidden; }
+    .title-bar { display:flex; justify-content:space-between; align-items:center; padding:4px 8px; background:linear-gradient(to right,#000080,#0000cd); color:#fff; border-bottom:2px solid #fff; }
     .buttons { display:flex; gap:4px; }
-    .btn-xp { width:4vw;max-width:16px;height:4vw;max-height:16px;
-      background:#ff5c5c;border:1px solid #fff;cursor:pointer;
-    }
-    .content { padding:4vw;background:#008080;border-top:2px solid #fff;text-align:center; }
-    h1 { font-size:4vw;max-font-size:1.25rem;color:#ff79c6;
-      text-shadow:0 0 5px #ff79c6,0 0 10px #ff79c6;margin-bottom:2vw;
-    }
-    p { font-size:2.5vw;max-font-size:.75rem;color:#00ffff;
-      text-shadow:0 0 5px #00ffff;margin-bottom:4vw;
-    }
-    #visualizer { display:flex;justify-content:space-between;align-items:flex-end;
-      height:10vw;margin:4vw 0;
-    }
-    .bar { width:4%;background:#ff79c6;transition:height .1s; }
-    /* Controls */
-    .control-btn { margin:2vw 1vw;padding:2vw 4vw;font-size:2vw;
-      background:#ff79c6;border:2px solid #00ffff;border-radius:4vw;
-      color:#000;transition:.2s;cursor:pointer;
-    }
-    .control-btn:hover { background:#00ffff;transform:scale(1.1);color:#121212; }
-    #player { width:100%;aspect-ratio:16/9;border:2px solid #00ffff;
-      border-radius:1vw;margin:4vw 0; }
-    .fallback { font-size:2vw;color:#ff79c6;margin-top:2vw; }
-    .fallback a { color:#00ffff;text-decoration:underline; }
+    .btn-xp { width:4vw; max-width:16px; height:4vw; max-height:16px; background:#ff5c5c; border:1px solid #fff; cursor:pointer; }
+    .content { padding:4vw; background:#008080; border-top:2px solid #fff; text-align:center; }
+    /* Neon flicker text */
+    .neon-text { font-size:5vw; max-font-size:1.5rem; color:#ff79c6; text-shadow:0 0 5px #ff79c6,0 0 20px #ff79c6; animation:textFlicker 1.5s infinite; }
+    @keyframes textFlicker {0%,100%{opacity:1;}50%{opacity:.5;text-shadow:0 0 10px #00ffff;}}
+    h1 { margin-bottom:1vw; }
+    p { font-size:3vw; max-font-size:.75rem; color:#00ffff; text-shadow:0 0 5px #00ffff; margin:1vw 0 .5vw; }
+    /* Video & Controls */
+    #player { width:100%; aspect-ratio:16/9; border:2px solid #00ffff; border-radius:1vw; margin:.5vw 0; }
+    .control-btn { margin:2vw 1vw; padding:2vw 4vw; font-size:2vw; max-font-size:.6rem; background:#ff79c6; border:2px solid #00ffff; border-radius:4vw; color:#000; cursor:pointer; transition:.2s; }
+    .control-btn:hover { background:#00ffff; transform:scale(1.1); color:#121212; }
     /* Chat */
-    #chat { height:30vh;max-height:150px;overflow-y:auto;
-      background:rgba(0,0,0,.5);margin:4vw 0;padding:4vw;
-      font-family:'Press Start 2P',monospace;font-size:2vw;color:#fff;
-      border:2px solid #00ffff;
-      /* Rainbow gradient animation */
-      background-image: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet);
-      background-size: 400%;
-      animation: rainbow 5s linear infinite;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-    @keyframes rainbow { 0%{background-position:0%}100%{background-position:400%} }
-    #chat-input { width:70%;padding:2vw;font-size:2vw;margin:2vw 1vw; }
-    #send-btn { padding:2vw 4vw;font-size:2vw; }
-    @media(min-width:600px){ h1{font-size:1.25rem}p{font-size:.75rem}.control-btn{font-size:.6rem;padding:.6rem 1.2rem;border-radius:6px;}#chat{font-size:.6rem;padding:8px}#chat-input{font-size:.6rem;padding:4px;width:calc(100%-60px);margin:8px 4px}#send-btn{padding:4px 8px;font-size:.6rem} }
+    #chat { height:25vh; max-height:200px; overflow-y:auto; background:rgba(0,0,0,.7); margin:2vw 0; padding:2vw; font-family:'Press Start 2P',monospace; font-size:5vw; max-font-size:1rem; color:#fff; border:2px solid #00ffff; animation: rainbowText 5s linear infinite; }
+    @keyframes rainbowText { 0%{color:red;}16%{color:orange;}32%{color:yellow;}48%{color:green;}64%{color:blue;}80%{color:indigo;}100%{color:violet;} }
+    #chat-input { width:65%; padding:2vw; font-size:5vw; max-font-size:1rem; margin:1vw 1vw; }
+    #send-btn { padding:2vw 4vw; font-size:5vw; max-font-size:1rem; }
+    .fallback { font-size:3vw; max-font-size:.75rem; color:#ff79c6; margin-top:1vw; }
+    .fallback a { color:#00ffff; text-decoration:underline; }
+    @media(min-width:600px){ .neon-text{font-size:1.5rem;}p{font-size:.75rem;}#chat{font-size:1rem;}#chat-input,#send-btn{font-size:.75rem;} }
   </style>
 </head>
 <body>
-  <div class="bg"></div><div class="neon"></div>
-  <script>setInterval(()=>{const s=document.createElement('div');s.className='star';const sz=Math.random()*4+2;s.style.width=sz+'px';s.style.height=sz+'px';s.style.left=Math.random()*100+'%';s.style.top=Math.random()*100+'%';document.body.appendChild(s);s.addEventListener('animationend',()=>s.remove());},100);</script>
+  <div class="bg"></div>
+  <div class="neon"></div>
+  <!-- Floating Stars -->
+  <script>setInterval(() => {const s=document.createElement('div');s.className='floating-star';s.innerText='★';s.style.left=Math.random()*90+'%';document.body.appendChild(s);s.addEventListener('animationend',()=>s.remove());},200);</script>
   <div class="window">
     <div class="title-bar"><span>Vaporwave Player</span><div class="buttons"><div class="btn-xp"></div><div class="btn-xp"></div><div class="btn-xp"></div></div></div>
     <div class="content">
-      <h1>Retro Music On XP</h1>
+      <div class="neon-text">Retro Music On XP</div>
       <p>涼しげなネオンとグリッチの幻想をお楽しみください</p>
-      <div id="visualizer"></div>
       <div id="player"></div>
       <div><button class="control-btn" id="prev">◀︎ Prev</button><button class="control-btn" id="play">Play</button><button class="control-btn" id="next">Next ▶︎</button></div>
       <div id="chat"></div>
@@ -110,27 +66,14 @@
     </div>
   </div>
   <script>
-    // Floating GIFs
-    const gifs=['https://media.tenor.com/Uvw2ilLXmnYAAAAj/pixel-heart.gif','https://i.pinimg.com/originals/a9/9e/41/a99e419272b53630b5d5b178188a8900.gif','https://i.pinimg.com/originals/ea/9f/e2/ea9fe22ede2464b8aab30a4028a796a9.gif'];
-    setInterval(()=>{const e=document.createElement('div');e.className='floating-gif';e.style.left=Math.random()*90+'%';e.style.backgroundImage=`url('${gifs[Math.floor(Math.random()*gifs.length)]}')`;document.body.appendChild(e);e.addEventListener('animationend',()=>e.remove());},800);
-  </script>
-  <script>
-    // YouTube & Visualizer
+    // YouTube API
     const ytTag=document.createElement('script');ytTag.src='https://www.youtube.com/iframe_api';document.head.appendChild(ytTag);
-    let player,bars=[];
-    function initVisualizer(){const v=document.getElementById('visualizer');for(let i=0;i<20;i++){const b=document.createElement('div');b.className='bar';v.appendChild(b);bars.push(b);}}
-    function onYouTubeIframeAPIReady(){player=new YT.Player('player',{playerVars:{listType:'playlist',list:'PLGa3uxog5E0tb8WmX0STOZRgLZAZX-rAk',autoplay:0,controls:0,loop:1,modestbranding:1,origin:location.origin},events:{onReady:()=>initVisualizer(),onStateChange:onStateChange}});}
-    let iv;
-    function onStateChange(e){clearInterval(iv);if(e.data===YT.PlayerState.PLAYING){iv=setInterval(()=>{bars.forEach(b=>b.style.height=Math.random()*100+'%');},100);}else{bars.forEach(b=>b.style.height='0%');}}
-    document.addEventListener('DOMContentLoaded',()=>{
-      document.getElementById('play').onclick=()=>{const s=player.getPlayerState();s===YT.PlayerState.PLAYING?player.pauseVideo():player.playVideo();};
-      document.getElementById('prev').onclick=()=>player.previousVideo();
-      document.getElementById('next').onclick=()=>player.nextVideo();
+    let player;
+    function onYouTubeIframeAPIReady(){player=new YT.Player('player',{playerVars:{listType:'playlist',list:'PLGa3uxog5E0tb8WmX0STOZRgLZAZX-rAk',autoplay:0,controls:0,loop:1,modestbranding:1,origin:location.origin}})}
+    document.addEventListener('DOMContentLoaded',()=>{document.getElementById('play').onclick=()=>{const s=player.getPlayerState();s===YT.PlayerState.PLAYING?player.pauseVideo():player.playVideo();};document.getElementById('prev').onclick=()=>player.previousVideo();document.getElementById('next').onclick=()=>player.nextVideo();
       // Firebase init
-      const firebaseConfig={apiKey:"AIzaSyCcNEZGmBSH3U_RlvmAOXYFHbW7dzzbFDE",authDomain:"vapor-71b36.firebaseapp.com",databaseURL:"https://vapor-71b36-default-rtdb.firebaseio.com",projectId:"vapor-71b36",storageBucket:"vapor-71b36.appspot.com",messagingSenderId:"344956365850",appId:"1:344956365850:web:51ca717cc8dda9838bb5a3"};
-      firebase.initializeApp(firebaseConfig);
-      const db=firebase.database().ref('chat');
-      db.on('child_added',snap=>{const m=snap.val();const d=document.createElement('div');d.textContent=m;document.getElementById('chat').appendChild(d);document.getElementById('chat').scrollTop=document.getElementById('chat').scrollHeight;});
+      const config={apiKey:"AIzaSyCcNEZGmBSH3U_RlvmAOXYFHbW7dzzbFDE",authDomain:"vapor-71b36.firebaseapp.com",databaseURL:"https://vapor-71b36-default-rtdb.firebaseio.com",projectId:"vapor-71b36",storageBucket:"vapor-71b36.appspot.com",messagingSenderId:"344956365850",appId:"1:344956365850:web:51ca717cc8dda9838bb5a3"};firebase.initializeApp(config);
+      const db=firebase.database().ref('chat');db.on('child_added',snap=>{const m=snap.val();const d=document.createElement('div');d.textContent=m;document.getElementById('chat').appendChild(d);document.getElementById('chat').scrollTop=document.getElementById('chat').scrollHeight;});
       document.getElementById('send-btn').onclick=()=>{const v=document.getElementById('chat-input').value;if(v){db.push(v);document.getElementById('chat-input').value='';}};
     });
   </script>
